# iozarrpy

./: .gitignore  Cargo.toml  README.md  example_zarr.json  justfile  pyproject.toml
.cursor/plans/: datatree_full_implementation_9c1f13e3.plan.md  remove_primary_variable_hack_94f16d51.plan.md
.cursor/rules/: use-uv-directly.mdc
.github/workflows/: ci.yaml  publish.yaml  version-tag.yaml
benches/: chunk_processing.rs
docs/: column-enrichment-and-projection.md
iozarrpy/: Cargo.toml  README.md  pyproject.toml
iozarrpy-tests/: pyproject.toml
iozarrpy-tests/tests/: __init__.py  _artifacts.py  baseline_utils.py  conftest.py  test_baseline_compare_orography.py  test_generated_orography_e2e.py  test_scan_zarr.py  zarr_gen_test.py
iozarrpy/scripts/: run_tests.sh
iozarrpy/src/: lib.rs  zarr_source.rs
iozarrpy/src/iozarrpy/: __init__.py
rainbear/: Cargo.toml  README.md  pyproject.toml
rainbear-tests/: pyproject.toml
rainbear-tests/tests/: __init__.py  conftest.py  smoke_test.py  test_baseline_compare_orography.py  test_generated_orography_e2e.py  test_mem.py  test_scan_zarr.py
rainbear/scripts/: run_tests.sh
rainbear/src/: lib.rs  samplers.rs  zarr_source.rs
rainbear/src/rainbear/: __init__.py
sandbox/: .gitignore
scripts/: run_tests.sh
src/: bench_internals.rs  chunk_plan.rs  error.rs  lib.rs  zarr_meta.rs  zarr_scan_async.rs  zarr_source.rs  zarr_store.rs
src/backend/: caching.rs  compile.rs  icechunk.rs  icechunk_py.rs  lazy.rs  mod.rs  py.rs  source.rs  sync.rs  traits.rs  zarr.rs
src/backend/implementation/: icechunk.rs  icechunk_iterating.rs  iterating.rs  iterating_common.rs  lazy.rs  mod.rs  zarr_async.rs
src/backend/py/: backend_options_py.rs  debug.rs  icechunk_async_py.rs  mod.rs  zarr_async_py.rs  zarr_sync_py.rs
src/chunk_plan/: compile_boolean.rs  compile_cmp.rs  compile_ctx.rs  compile_entry.rs  compile_is_between.rs  compile_is_in.rs  compile_node.rs  coord_resolve.rs  errors.rs  expr_utils.rs  identity.rs  index_ranges.rs  interpolate_selection_nd.rs  literals.rs  mod.rs  monotonic_bounds.rs  monotonic_impl.rs  monotonic_scalar.rs  plan.rs  prelude.rs  selection.rs  selection_to_chunks.rs  selector.rs  types.rs
src/chunk_plan/exprs/: compile_boolean.rs  compile_cmp.rs  compile_ctx.rs  compile_is_between.rs  compile_is_in.rs  compile_node.rs  compile_node_lazy.rs  errors.rs  expr_plan.rs  expr_utils.rs  expr_walk.rs  interpolate_selection_nd.rs  literals.rs  mod.rs  selector.rs
src/chunk_plan/exprs/compile/: boolean.rs  cmp.rs  expr.rs  interpolate.rs  mod.rs  selector.rs  utils.rs
src/chunk_plan/indexing/: backend_resolver_async.rs  builder.rs  grid_execution.rs  grid_join_reader.rs  grid_join_tree.rs  grouped_selection.rs  index_ranges.rs  index_set.rs  interpolate_selection_nd.rs  lazy_materialize.rs  lazy_selection.rs  mod.rs  monotonic_async.rs  monotonic_bounds.rs  monotonic_impl.rs  monotonic_scalar.rs  plan.rs  resolver_traits.rs  selection.rs  selection_base.rs  selection_to_chunks.rs  streaming_batch_plan.rs  types.rs
src/chunk_plan/selection/: constraint.rs  mod.rs
src/codec_compat/: aliases.rs  dtype.rs  fso.rs  mod.rs  runtime.rs
src/errors/: backend.rs  mod.rs
src/iozarrpy/: __init__.py  _core.pyi
src/meta/: dims.rs  dtype.rs  load_async.rs  load_sync.rs  mod.rs  path.rs  shared.rs  time_encoding.rs  types.rs
src/py/: codec_config.rs  debug.rs  expr_extract.rs  mod.rs  scan_async.rs  selected_chunks.rs
src/rainbear/: __init__.py  __init__.pyi  _core.pyi
src/reader/: column_data.rs  geometry.rs  limits.rs  mod.rs  retrieve_async.rs  retrieve_sync.rs  var_mapping_async.rs  var_mapping_sync.rs
src/scan/: chunk_to_df.rs  column_policy.rs  columns.rs  grid_combiner.rs  mod.rs  open_arrays.rs  prelude.rs  scan_async.rs  sync_chunk_to_df.rs
src/scan/async_scan/: async_chunk_to_df.rs  mod.rs
src/scan/shared/: columns.rs  mod.rs
src/scan/sync_scan/: mod.rs  sync_chunk_to_df.rs
src/shared/: compile.rs  intern.rs  mod.rs  options.rs  parallel.rs  stats.rs  structural.rs  traits.rs  zarr.rs
src/source/: mod.rs  zarr_source.rs  zarr_source_new.rs  zarr_source_next.rs  zarr_source_predicate.rs  zarr_source_pymethods.rs
src/source/zarr_source/: zarr_source_new.rs  zarr_source_next.rs  zarr_source_predicate.rs  zarr_source_pymethods.rs
src/store/: adapters.rs  array.rs  mod.rs  open_async.rs  open_sync.rs
tests/: __init__.py  _artifacts.py  baseline_utils.py  conftest.py  datatree_generators.py  icechunk_fixtures.py  smoke_test.py  test_baseline_compare_orography.py  test_benchmark_backend_caching.py  test_benchmark_novel_queries.py  test_benchmark_scan.py  test_consolidated_metadata.py  test_coordinate_only_query.py  test_datatree_e2e.py  test_datatree_predicate_pushdown.py  test_debug_planning.py  test_expr_advanced.py  test_expr_comprehensive.py  test_filter_expr_chunk_planning.py  test_gcp_arco_era5_cloud.py  test_generated_orography_e2e.py  test_heterogeneous_chunk_grids.py  test_icechunk_backend.py  test_icechunk_zlib_dtype.py  test_inferred_vars.py  test_interpolars_direct_chunk_data.py  test_interpolation_cf_datetime.py  test_interpolation_values_vs_xarray.py  test_iterator_streaming.py  test_many_variables_async_scan.py  test_mem.py  test_partial_chunk_boundary.py  test_point_dim_streaming_scan.py  test_predicate_pushdown_expr_variants.py  test_scan_zarr.py  test_scan_zarr_async_equivalence.py  test_selected_chunks_geospatial_planning.py  test_selected_chunks_interpolars_plugin_planning.py  test_selected_chunks_more_scenarios.py  test_selected_chunks_planner.py  (+10 more)
