[package]
name = "rainbear"
version = "0.1.0"
edition = "2024"
publish = false
description = "Build lazy Zarr scans with Polars"
authors = ["Benjamin Sobel <ben-developer@opayq.com>"]
license = "MIT"
repository = "https://github.com/UserNobody14/iozarrpy"
documentation = "https://github.com/UserNobody14/iozarrpy"
keywords = ["zarr", "polars", "lazy"]
categories = ["data-processing"]


[lib]
name = "_core"
# "cdylib" for Python extension, "rlib" for tests
crate-type = ["cdylib", "rlib"]

[dependencies]
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
# "extension-module" is enabled via feature flag (only for cdylib builds, not tests)
pyo3 = { version = "0.27.2", features = ["abi3-py39"] }

# Get polars from git.
#
# IMPORTANT: these features must match Python Polars' enabled DSL surface area; otherwise Expr
# deserialization can decode to the wrong FunctionExpr variants (feature-gated enum variant index drift).
#
# This list is mirrored from Polars' `polars-python` crate for the `py-1.37.1` tag.
polars = { git = "https://github.com/pola-rs/polars.git", tag = "py-1.37.1", features = [
    "abs",
    "approx_unique",
    "array_any_all",
    "arg_where",
    "bitwise",
    "business",
    "concat_str",
    "cum_agg",
    "cumulative_eval",
    "dataframe_arithmetic",
    "month_start",
    "month_end",
    "offset_by",
    "diagonal_concat",
    "diff",
    "dot_diagram",
    "dot_product",
    "dtype-categorical",
    "dtype-extension",
    "dtype-full",
    "dynamic_group_by",
    "ewma",
    "ewma_by",
    "fmt",
    "fused",
    "interpolate",
    "interpolate_by",
    "is_first_distinct",
    "is_last_distinct",
    "is_unique",
    "is_between",
    "is_in",
    "is_close",
    "lazy",
    "list_eval",
    "list_to_struct",
    "list_arithmetic",
    "array_arithmetic",
    "array_to_struct",
    "log",
    "mode",
    "moment",
    "ndarray",
    "partition_by",
    "product",
    "random",
    "range",
    "rank",
    "reinterpret",
    "replace",
    "rolling_window",
    "rolling_window_by",
    "round_series",
    "row_hash",
    "rows",
    "semi_anti_join",
    "serde-lazy",
    "string_encoding",
    "string_normalize",
    "string_reverse",
    "string_to_integer",
    "string_pad",
    "strings",
    "temporal",
    "timezones",
    "to_dummies",
    "true_div",
    "unique_counts",
    "zip_with",
    "cov",
] }
# `FfiPlugin` lives behind `polars-lazy/ffi_plugin` (which enables the correct downstream
# `polars-expr`/`polars-plan` feature chain). Add it directly so the Expr pickle/bincode
# layout matches Python Polars when FFI plugins are present.
polars-lazy = { git = "https://github.com/pola-rs/polars.git", tag = "py-1.37.1", features = ["ffi_plugin"] }
pyo3-polars = { git = "https://github.com/pola-rs/polars.git", tag = "py-1.37.1", features = [
    "object",
    "dtype-extension",
    "derive",
    "lazy",
    "dtype-full",
] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "sync"] }
url = "2.5.4"
zarrs = { version = "0.23.0-beta.3", features = ["async", "sharding"] }
zarrs_object_store = { version = "0.6.1", features = [
    "aws",
    "azure",
    "gcp",
    "http",
    "fs",
] }
zarrs_icechunk = "0.4"
# Temporary until polars supports chrono > 0.4.41
icechunk = "=0.3.8"
serde_json = "1.0.145"
chrono = { version = "=0.4.41", features = ["clock", "std", "serde"] }
futures = "0.3.31"
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
regex = "1.9"
regex-syntax = "0.8.5"
smallvec = "1.13"
async-trait = "0.1"
internment = { version = "0.8", features = ["arc"] }
pyo3-object_store = "0.8"
ambassador = "0.5.0"

# Profiling/tracing support (behind feature flag)
console-subscriber = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }

[features]
default = ["extension-module"]
# extension-module: Enable for Python extension builds (maturin), disable for cargo test
extension-module = ["pyo3/extension-module"]
tokio-console = ["dep:console-subscriber", "dep:tracing", "tokio/tracing"]

[profile.release]
lto = false
codegen-units = 16

# Some crates don't change as much but benefit more from
# more expensive optimization passes, so we selectively
# decrease codegen-units in some cases.
# [profile.release.package.ruff_python_parser]
# codegen-units = 1
# [profile.release.package.ruff_python_ast]
# codegen-units = 1
# [profile.release.package.salsa]
# codegen-units = 1

# Profile to build a minimally sized binary
[profile.minimal-size]
inherits = "release"
opt-level = "z"
codegen-units = 1
