[project]
name = "rainbear-workspace"
version = "0.1.0"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Benjamin Sobel", email = "ben-developer@opayq.com" }
]
keywords = ["zarr", "polars", "lazy"]

[tool.uv.workspace]
members = ["rainbear", "rainbear-tests"]

[tool.uv.sources]
rainbear = { workspace = true }

[dependency-groups]
dev = [
    "rust-just>=1.46.0",
]

