[project]
name = "rainbear"
version = "2.1.0"
description = "Build lazy Zarr scans with Polars"
readme = "README.md"
authors = [
    { name = "Benjamin Sobel", email = "ben-developer@opayq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars==1.37.1",
]
license = { file = "LICENSE" }
keywords = ["zarr", "polars", "lazy"]


[project.scripts]
rainbear = "rainbear:main"

[tool.maturin]
module-name = "rainbear._core"
python-packages = ["rainbear"]
python-source = "src"
env = { RUST_MIN_STACK = "33554432" }
bindings = "pyo3"
include = [
    { path = "src/rainbear/*.so", format = "sdist"},
    { path = "src/rainbear/*.pyd", format = "sdist"},
    { path = "src/rainbear/dependencies/", format = "sdist"},
    { path = "LICENSE", format = "sdist"},
]
# For "editable" builds, use the specified Cargo profile,
# e.g. to use "dev" builds for local development
# (uses `profile` if this key is not set)
editable-profile = "dev"
# Require Cargo.lock and cache are up to date
frozen = false
# Require Cargo.lock is up to date
locked = false

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]
extra-build-variables = { rainbear = { RUST_MIN_STACK = "33554432" } }

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "cartopy>=0.25.0",
    "fsspec>=2026.1.0",
    "xarray[complete]>=2025.12.0",
    "maturin>=1.10.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
    "numpy>=1.26",
    "pandas>=2.2.0",
    "xarray>=2024.10.0",
    "zarr>=3.0.0",
    "numcodecs>=0.13.0",
    "pytest-benchmark>=5.2.3",
    # Needed for FFI-plugin planning tests and for real-world Expr shapes.
    "interpolars>=0.1.0",
    "gcsfs>=2026.1.0",
    "obstore>=0.8.2",
    "py-spy>=0.4.1",
    "icechunk>=1.1.18",
    "pyrefly>=0.50.1",
]

build = [
    "maturin>=1.10.2",
    "patchelf>=0.17.2.2; sys_platform == 'linux'"
]

[tool.pyright]
extraPaths = ["."]

[tool.pyrefly]
site_package_path = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "-m", "not benchmark"]
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
]
