[project]
name = "iozarrpy-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "iozarrpy",
    "polars>=0.20.0",
    "numpy>=1.26",
    "pandas>=2.2.0",
    "xarray>=2024.10.0",
    "zarr>=3.0.0",
    "numcodecs>=0.13.0",
]