[package]
name = "iozarrpy"
version = "0.1.0"
edition = "2024"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py39"] }
# arrow = { version = "24.0.0", default-features = false }
polars = { version = "0.52.0", features = ["full"] }
polars-python = { version = "0.52.0", features = ["full", "allow_unused"] }
pyo3-polars = { version = "0.25.0", features = ["derive", "lazy"] }
rand = { version = "0.8.5", features = [] }
pyo3-polars-derive = { version = "0.19.0" }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
url = "2.5.4"
zarrs = { version = "0.23.0-beta.3", features = ["async"] }
zarrs_object_store = { version = "0.6.1", features = ["aws", "azure", "gcp", "http", "fs"] }
serde_json = "1.0.145"
chrono = { version = "0.4", features = ["clock", "std"] }
[dependencies.arrow]
package = "polars-arrow"
version = "0.52.0"
default-features = false
features = [
  "compute_aggregate",
  "compute_arithmetics",
  "compute_bitwise",
  "compute_boolean",
  "compute_boolean_kleene",
  "compute_comparison",
]