[project]
name = "rainbear"
version = "0.1.0"
description = "Build lazy Zarr scans with Polars"
readme = "README.md"
authors = [
    { name = "Benjamin Sobel", email = "ben-developer@opayq.com" }
]
requires-python = ">=3.13"
dependencies = ["polars>=0.20.0"]

[project.scripts]
rainbear = "rainbear:main"

[tool.maturin]
module-name = "rainbear._core"
python-packages = ["rainbear"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

