[project]
name = "rainbear"
version = "1.1.0a1"
description = "Build lazy Zarr scans with Polars"
readme = "README.md"
authors = [
    { name = "Benjamin Sobel", email = "ben-developer@opayq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.25.2",
]
license = { file = "LICENSE" }
keywords = ["zarr", "polars", "lazy"]


[project.scripts]
rainbear = "rainbear:main"

[tool.maturin]
module-name = "rainbear._core"
python-packages = ["rainbear"]
python-source = "src"
bindings = "pyo3"
include = [
    { path = "src/rainbear/*.so", format = "sdist"},
    { path = "src/rainbear/*.pyd", format = "sdist"},
    { path = "src/rainbear/dependencies/", format = "sdist"},
    { path = "LICENSE", format = "sdist"},
]

[tool.uv]
  
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.10.2",
]

build = [
    "maturin>=1.10.2",
    "patchelf>=0.17.2.2; sys_platform == 'linux'", 
    "conan==2.17.1",
]

